imagem do topo atualizada

--- a/falecon.html
+++ b/falecon.html
@@ -37,7 +37,7 @@
         </div>
     </nav> 
 </header>
-
+<body>
     <div class="falecon">
         <div class="int">
             <p><strong>&#9742; Telefone: </strong>(48) 3338-9433 <br>
