--- a/home.html
+++ b/home.html
@@ -16,13 +16,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
 </head>
 <header>
     <div>
         <img src="Ativo 1@4x.png" alt="" id="logo">
     </div> 
     <nav class="navbar navbar-expand-lg navbar-light"  id="barra" >
-        <a class="navbar-brand" href="home.html">CJC móveis</a>
+        <a class="navbar-brand" href="home.html">CJC Móveis</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,7 +43,32 @@
 
 <body>
     
+    <div class="corpo">
+        <div class="quem-somos">
+            <h3>
+                Quem somos
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi tempora velit deleniti. Vel reprehenderit, consequuntur voluptates pariatur esse repudiandae laboriosam totam inventore labore dolores iure consectetur impedit blanditiis placeat sint?
+            </p>
+        </div>  
+        <div class="carrosel-home">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div id="active" class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/home/COZINHA 1-3.jpg" class="foto-carrosel" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/home/COZINHA 1.jpg" class="foto-carrosel" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/home/COZINHA @.jpg" class="foto-carrosel" alt="...">
+                  </div>
+                </div>
+              </div>
+        </div>
 
+    </div>
 
 
 </body>
