--- a/falecon.html
+++ b/falecon.html
@@ -22,7 +22,7 @@
         <img src="Ativo 1@4x.png" alt="" id="logo">
     </div> 
     <nav class="navbar navbar-expand-lg navbar-light"  id="barra" >
-        <a class="navbar-brand" href="home.html">CJC móveis</a>
+        <a class="navbar-brand" href="home.html">CJC Móveis</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -66,7 +66,7 @@
                                     <strong>Escreva abaixo sua mensagem</strong><br>
                                     <textarea name="mensagem" id="mensagem_contato" cols="30" rows="10"></textarea>
                                     <p><strong></strong><br>
-                                        <input type="submit" value="enviar" class="enviar_1">
+                                        <input type="submit" value="Enviar" class="enviar_1">
                                     </p>
                                 </p>
                             </td>
