--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CJC móveis planejados</title>
+    <title>CJC Móveis Planejados</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.PNG" type="image/x-icon" />
 
@@ -56,14 +56,15 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div id="active" class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/home/COZINHA 1-3.jpg" class="foto-carrosel" alt="...">
+                    <img src="images/home/home1.png" class="foto-carrosel" alt="banheiro com espelho, e bancada de canela">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/home/COZINHA 1.jpg" class="foto-carrosel" alt="...">
+                    <img src="images/home/home2.png" class="foto-carrosel" alt="banheiro com espelho, e bancada de canela">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/home/COZINHA @.jpg" class="foto-carrosel" alt="...">
+                    <img src="images/home/home3.png" class="foto-carrosel" alt="móvel de banheiro com espelho, e bancada de canela">
                   </div>
+                  
                 </div>
               </div>
         </div>
