--- a/home.html
+++ b/home.html
@@ -80,10 +80,10 @@
             width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
     <div class="footer__telefone">
-        <p>E-mail <i class="far fa-envelope"></i> orcamentos.cjc@gmail.com</p>
+        <p><i class="far fa-envelope"></i><a class="email-footer" href="mailto:contatocjc@gmail.com"> orcamentos.cjc@gmail.com</a></p>
         
         
-            <p>WhatsApp 
+            <p> 
                 <i class="fab fa-whatsapp"></i>
                 <a class="telefone" href="https://api.whatsapp.com/send?l=pt&phone=5548991019220&" target="_blank"> (48)991019220</a>
                 <a class="telefone" href="https://api.whatsapp.com/send?l=pt&phone=5548988557102&" target="_blank"> (48)988557102</a>
@@ -95,7 +95,7 @@
     <div class="footer__newsletter">
         <label>Newsletter</label>
         <input type="email" name="email">
-        <button class="assinar" type="submit" onsubmit="">Assinar</button>
+        <button class="btn btn-primary" type="submit" onsubmit="">Assinar</button>
     </div>
 
 </footer>
