adição de comentários

--- a/falecon.html
+++ b/falecon.html
@@ -37,13 +37,15 @@
         </div>
     </nav> 
 </header>
+
+<!--a página fale conosco serve para o usuário entrar em contato com a empresa através de um fomulário e uma caixa de mensagens-->
 <body>
     <div class="falecon">
-        <div class="int">
+        <div class="int"> 
             <p><strong>&#9742; Telefone: </strong>
                 <a class="telefone-form" href="https://api.whatsapp.com/send?l=pt&phone=5548991019220&" target="_blank"> (48)991019220</a>
                 <a class="telefone-form" href="https://api.whatsapp.com/send?l=pt&phone=5548988557102&" target="_blank"> (48)988557102</a><br>
-
+<!--também estão apresentadas os contatos telefônicos da empresa e email, com botões interativos linkando diretamente com o aplicativo whatsapp, ou aplicativo de email-->    
                 <strong>&#9993; E-mail:</strong> <a id="email-form" href="mailto:contatocjc@gmail.com"> orcamentos.cjc@gmail.com</a>
             </p>
             <p>Ou entre em contato conosco através do formulário abaixo:</p>
