--- a/home.html
+++ b/home.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CJC Móveis Planejados</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">        <!--parte do código destinada as informações sobre o código, como título da página-->
+    <title>CJC Móveis Planejados</title>                                          
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.PNG" type="image/x-icon" />
 
 
-
+    <!--também ficam dispostas as tags com links(folhas de estilos, bootstrap) e scripts utlizados no projeto-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -22,10 +22,10 @@
 </head>
 <header>
     <div>
-        <img src="Ativo 1@4x.png" alt="" id="logo">
+        <img src="Ativo 1@4x.png" alt="" id="logo">        <!--No header fica localizado o top do site, com o banner e logo, e abaixo o menu de navegação do site-->
     </div> 
     <nav class="navbar navbar-expand-lg navbar-light"  id="barra" >
-        <a class="navbar-brand" id="cjc"  href="home.html">CJC Móveis</a>
+        <a class="navbar-brand" id="cjc"  href="home.html">CJC Móveis</a> 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
 
 <body>
     
-    <div class="corpo">
+    <div class="corpo">                               <!--O corpo da página home, apresentando informações sobre a empresa e um slide com fotos, posicionados um ao lado do outro-->
         <div class="quem-somos">
             <h3 id="quem-somos-titulo">
                 Quem somos
@@ -77,14 +77,14 @@
                 </div>
               </div>
         </div>
-
+        
     </div>
 
 
 </body>
-
-<footer class="footer">
-    <div class="footer__mapa">
+<!--No footer presente em todas as páginas, é onde serão apresentadas as informações de contatos da empresa.-->
+<footer class="footer">          
+    <div class="footer__mapa">     <!--a localização da empresa é apresentada através de um mapa interativo, fornecido pelo Google Maps-->
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3532.7650170592806!2d-48.5058506849382!3d-27.69365668279757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95273b3ea7688871%3A0x993f40f6643363d2!2sServid%C3%A3o%20Canto%20das%20P%C3%A9rolas%2C%20344%20-%20Campeche%2C%20Florian%C3%B3polis%20-%20SC%2C%2088063-076!5e0!3m2!1spt-BR!2sbr!4v1622075944762!5m2!1spt-BR!2sbr"
             width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
@@ -112,7 +112,7 @@
 
     <div class="footer__newsletter">
         <label>Newsletter</label>
-        <input type="email" name="email">
+        <input type="email" name="email">    <!--Criamos também uma caixa de texto para a assinatura de um Newsletter da empresa-->
         <button class="btn btn-primary" type="submit" onsubmit="">Assinar</button>
     </div>
 
