alteração da página home para index

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <img src="Ativo 1@4x.png" alt="" id="logo">        <!--No header fica localizado o top do site, com o banner e logo, e abaixo o menu de navegação do site-->
     </div> 
     <nav class="navbar navbar-expand-lg navbar-light"  id="barra" >
-        <a class="navbar-brand" id="cjc"  href="home.html">CJC Móveis</a> 
+        <a class="navbar-brand" id="cjc"  href="index.html">CJC Móveis</a> 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav" href="home.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav" href="index.html">Home <span class="sr-only">(current)</span></a>
                 <a class="nav" href="portfolio.html">Portfólio</a>
                 <a class="nav" href="falecon.html">Fale conosco</a>
     
