--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,14 @@
         <img src="Ativo 1@4x.png" alt="" id="logo">
     </div> 
     <nav class="navbar navbar-expand-lg navbar-light"  id="barra" >
-        <a id="cjc"class="navbar-brand" href="home.html">CJC móveis</a>
+        <a id="cjc"class="navbar-brand" href="index.html">CJC móveis</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav" href="home.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav" href="index.html">Home <span class="sr-only">(current)</span></a>
                 <a class="nav" href="portfolio.html">Portfólio</a>
                 <a class="nav" href="falecon.html">Fale conosco</a>
     
