--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="footer__newsletter">
         <label>Newsletter</label>
         <input type="email" name="email">    <!--Criamos também uma caixa de texto para a assinatura de um Newsletter da empresa-->
-        <button class="btn btn-primary" type="submit" onsubmit="">Assinar</button>
+        <button class="btn btn-primary" type="submit" id="news-btn" onsubmit="">Assinar</button>
     </div>
 
 </footer>
