--- a/portfolio.html
+++ b/portfolio.html
@@ -311,7 +311,7 @@
     <div class="footer__newsletter">
         <label>Newsletter</label>
         <input type="email" name="email">
-        <button class="btn btn-primary" type="submit" onsubmit="">Assinar</button>
+        <button class="btn btn-primary" id="news-btn" type="submit" onsubmit="">Assinar</button>
     </div>
 
 </footer>
